applications/media-experimental/base/kavita/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kavita
  labels:
    app: kavita
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      targetPort: http
      protocol: TCP
  selector:
    app: kavita
